--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "3.5.1"
+  },
+  "dependencies": {
+    "pg": "^7.8.0",
+    "sequelize": "^4.42.0"
   }
 }
