--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
   "devDependencies": {
     "concurrently": "3.5.1"
   },
-  "dependencies": {
-    "pg": "^7.8.0",
-    "sequelize": "^4.42.0"
-  }
+  "dependencies": {}
 }
