--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0"
   },
   "main": "app.js",
   "devDependencies": {},
