--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "3.5.1"
+    "concurrently": "3.5.1",
+    "jasmine": "^3.3.1"
   },
   "dependencies": {}
 }
